--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+@import "primeflex/primeflex.css";
+
+body {
+  font-family: var(--font-family);
+}
 /* You can add global styles to this file, and also import other style files */
