--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,3 @@
 <div class="card flex justify-content-start">
-    <button #btn type="button" pButton icon="pi pi-bars" label="Menu" (click)="menu.toggle($event)"></button>
-    <p-tieredMenu #menu [model]="items" [popup]="true"></p-tieredMenu>
+    <p-tabMenu [model]="items" [popup]="true"></p-tabMenu >
 </div>
