--- a/src/app/calculadora-pessoas/calculadora-pessoas.component.html
+++ b/src/app/calculadora-pessoas/calculadora-pessoas.component.html
@@ -103,7 +103,7 @@
 <p-divider></p-divider>
 <div class="grid vertical-align-middle align-items-center text-center">
     <div class="col-12 align-items-center">
-        <a target="_blank" href="https://api.whatsapp.com/send?text=*Contagem%20de%20pessoas%20({{dataAtual()}})*%0A*Crian%C3%A7as*%20=%20{{criancas}}%0A*Membros*%20=%20{{membros}}%0A*Visitantes*%20=%20{{visitantes}}">
+        <a target="_blank" href="{{mensagemWhatsapp()}}">
             <p-button icon="pi pi-whatsapp" label="Enviar pelo WhatsApp" styleClass="p-button-rounded p-button-success" class="p-2"></p-button>
         </a>
     </div>
