Ajuste de espaçamentos

--- a/src/app/calculadora-pessoas/calculadora-pessoas.component.html
+++ b/src/app/calculadora-pessoas/calculadora-pessoas.component.html
@@ -1,4 +1,4 @@
-<div class="grid vertical-align-middle align-items-start text-left" xmlns:p="http://www.w3.org/1999/html">
+<div class="grid align-items-start text-left pl-2 pr-2 pt-2" xmlns:p="http://www.w3.org/1999/html">
   <div class="col-6 align-items-start">
     <span class="text-lg"> Culto: </span>
     <br>
@@ -6,7 +6,7 @@
   </div>
   <div class="col-6 align-items-start">
     <label for="campus">Campus: </label>
-    <p-dropdown [options]="campus" placeholder="Selecione um campus..." [(ngModel)]="selectedCampus" id="campus"></p-dropdown>
+    <p-dropdown [options]="campus" placeholder="Selecione..." [(ngModel)]="selectedCampus" id="campus" class=""></p-dropdown>
   </div>
 </div>
 <p-divider></p-divider>
